fix line 41 from alight item to align items

--- a/movies.css
+++ b/movies.css
@@ -38,7 +38,7 @@
     height: 43px;
     border-radius: 11px;
     display: flex;
-    alight-items: center;
+    align-items: center;
   }
   
   input {
